[package]
name = "imgui_inspect"
version = "0.4.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Traits and default implementations for inspecting values with imgui."
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/aclysma/imgui-inspect"
homepage = "https://github.com/aclysma/imgui-inspect"
keywords = ["game", "imgui"]
categories = ["gui", "visualization"]

[dependencies]
imgui_inspect_derive = { path ="../imgui_inspect_derive" }
imgui = "0.3"